--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
         "laravel-elixir-vue-2": "^0.3.0",
         "laravel-elixir-webpack-official": "^1.0.10",
         "vue-axios": "^2.1.4",
+        "vue-moment": "^4.0.0",
         "vue-router": "^3.0.1",
         "vue-yandex-maps": "^0.7.15",
+        "vue2-datepicker": "^2.6.1",
+        "vuejs-datepicker": "^1.5.3",
         "vuex": "^3.0.1"
     }
 }
