--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "laravel-elixir": "^6.0.0-18",
         "laravel-elixir-vue-2": "^0.3.0",
         "laravel-elixir-webpack-official": "^1.0.10",
+        "sweetalert": "^2.1.2",
         "vue-axios": "^2.1.4",
+        "vue-ctk-date-time-picker": "^1.3.1",
         "vue-moment": "^4.0.0",
         "vue-router": "^3.0.1",
         "vue-yandex-maps": "^0.7.15",
